feat: migrate java ai logic to python boundary